fix: responsive on small screens

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --primary-color: #0284C7;
     --primary-light: #38BDF8;
     --secondary-color: #F4F4F4;
-    --background-color: #075985;
+    --background-color: #0089d2;
     --text-dark: #3D3D3D;
     --text-light: #FFFFFF;
     --border-radius: 6px;
@@ -15,6 +15,7 @@ body {
     max-width: 100%;
     overflow-x: hidden;
     box-sizing: border-box;
+    background-color: var(--secondary-color);
 }
 
 .wrapper {
@@ -39,7 +40,7 @@ body {
 h1 {
     color: var(--secondary-color);
     font-weight: 700;
-    font-size: 28px;
+    font-size: 40px;
     margin-bottom: 30px;
 }
 
@@ -117,24 +118,22 @@ input[type=number]::-webkit-outer-spin-button {
     flex-wrap: wrap;
     justify-content: center;
     gap: 20px;
-    background-color: var(--secondary-color);
 }
 
 .result-wrap {
-    min-width: 50vh;
+    min-width: 33%;
     background-color: var(--text-light);
     padding: 20px 32px;
     align-items: center;
+    text-align: center;
     justify-content: center;
     border-radius: var(--border-radius);
     border: 2px solid var(--primary-light);
-}
-
-.text-wrap {
     width: 350px;
     word-wrap: break-word;
     white-space: normal;
 }
+
 
 h3 {
     font-size: 20px;
@@ -151,13 +150,17 @@ p {
 
 @media (max-width: 430px) {
     h1{
-        font-size: 20px;
+        font-size: 32px;
     }
     h3 {
         font-size: 18px;
     }
+    .bottom{
+        gap: 12px;
+        padding: 30px 0;
+    }
     .result-wrap {
-        margin-bottom: 14px;
-        margin-top: 6px;
+        max-width: 70%;
+
     }
 }
